--- a/app/views/account/main.html.erb
+++ b/app/views/account/main.html.erb
@@ -28,12 +28,12 @@
 			<div class="navtree-list">
 				<h4>常用操作<i></i></h4>
 				<ul>
-					<li><a href="/admin/catalogs" title="网站栏目管理" target="main">网站栏目管理</a></li>
-					<li><a href="/admin/posts" title="文章管理" target="main">文章管理</a></li>
-					<li><a href="/admin/comments" title="评论管理" target="main">评论管理</a></li>
+					<li><a href="/admin/catalogs" title="文章栏目管理" target="main">文章栏目管理</a></li>
+					<li><a href="/admin/topics" title="文章管理" target="main">文章管理</a></li>
+					<li><a href="/admin/posts" title="评论管理" target="main">评论管理</a></li>
 					<li><a href="/admin/pics" title="图片管理" target="main">图片管理</a></li>
 					<li><a href="/admin/atts" title="附件管理" target="main">附件管理</a></li>
-					<li><a href="/admin/recycling" title="文章回收站" target="main">文章回收站</a></li>
+					<li><a href="/admin/topics/recycling" title="文章回收站" target="main">文章回收站</a></li>
 				</ul>
 			</div>
 			<div class="navtree-list" style="display:none;">
@@ -63,7 +63,6 @@
 		</div>
 	</div>
 	<div class="frame-main-con">
-		<div class="frame-main-con-nav" id="navNote">后台管理</div>
 		<div id="dvContainer" class="frame-main-con-body nui-scroll">
 			<iframe frameborder="0" name="main" scrolling="auto" src="/account/desktop" style="width:100%;height:98%;visibility:inherit;z-index:1"> </iframe>
 		</div>
