--- a/app/assets/stylesheets/backend.css
+++ b/app/assets/stylesheets/backend.css
@@ -40,20 +40,31 @@ body::-webkit-scrollbar-thumb:active{background: rgba(0,0,0,0.6);}
 .newtable td.data_ipt input{padding:4px 6px;width:400px;height:20px;line-height:20px;border:1px solid #CCC;border-radius:2px;font-size:12px;}
 .newtable td.data_ipt select{padding:0 20px;width:140px;height:30px;line-height:30px;background:#FFF;border:1px solid #CCC;border-radius:2px;font-size:12px;}
 .newtable td.data_ipt textarea{padding:8px 10px;width:500px;height:300px;border:1px solid #CCC;}
-.newtable td.data_sbt{padding:20px;}
-.newtable td.data_sbt input, .btnSubmit{margin:0 10px 0 0;padding:0 40px;height:32px;line-height:32px;background:#FB9337;border:1px solid #F0882C;border-radius:2px;color:#FFF;cursor:pointer;}
-.newtable td.data_sbt input:hover, .btnSubmit:hover{background:#485B79;border:1px solid #3F526F;}
+td.data_sbt{padding:20px;}
+td.data_sbt input, .btnSubmit{margin:0 10px 0 0;padding:0 40px;height:32px;line-height:32px;background:#FB9337;border:1px solid #F0882C;border-radius:2px;color:#FFF;cursor:pointer;}
+td.data_sbt input:hover, .btnSubmit:hover{background:#485B79;border:1px solid #3F526F;}
 .btnSubmit{width:100px;}
 
 .edtable tbody td input{padding:4px 6px;width:120px;height:20px;line-height:20px;text-align:center;border:1px solid #CCC;border-radius:2px;font-size:12px;}
 
-.list-opts{margin:20px 0;}
+
+.nav{position:fixed;top:0;left:0;width:100%;border-bottom:1px solid #DDD;background:#FFF;font-size:14px;}
+.main{padding-top:56px;}
+
+.list-opts{padding:14px 40px;}
 .list-opts input{margin:0 10px 0 0;padding:0 20px;height:32px;line-height:32px;background:#EEE;border:1px solid #CCC;border-radius:2px;color:#666;cursor:pointer;}
 .list-opts input:hover{background:#DDD;}
+.nav-links a{display:inline-block;margin:0 10px 0 0;padding:0 20px;height:30px;line-height:30px;background:#EEE;border:1px solid #CCC;border-radius:2px;font-size:12px;color:#666;}
+.nav-links a:hover{text-decoration:none;background:#DDD;}
 
-.pagination{float:right;}
-.pagination span, .pagination em, .pagination a{margin:0 2px;padding:6px 8px;height:20px;line-height:20px;border:1px solid #CCC;}
+.pagination{float:right;display:inline;margin-top:5px;}
+.pagination span, .pagination em, .pagination a{margin:0 2px;padding:6px 8px;height:20px;line-height:20px;border:1px solid #CCC;font-size:12px;}
 .pagination span.gap{border:0;}
 .pagination .current{background:#828282;font-style:normal;color:#ffffff;}
 .pagination a{text-decoration:none;}
 .pagination a:hover{background:#828282;color:#ffffff;}
+
+.nav-links-r{float:right;display:inline;}
+.nav-links-r form, .nav-links-r div{display:inline-block;}
+
+
