--- a/app/views/account/main.html.erb
+++ b/app/views/account/main.html.erb
@@ -48,11 +48,12 @@
 			<div class="navtree-list" style="display:none;">
 				<h4>系统相关<i></i></h4>
 				<ul>
-					<li><a href="/admin/run_logs" title="访问日志" target="main">访问日志</a></li>
 					<li><a href="/admin/sys/settings" title="系统参数" target="main">系统参数</a></li>
 					<li><a href="/admin/sys/mark" title="图片水印" target="main">图片水印</a></li>
 					<li><a href="/admin/sys/article_mix" title="防采集混淆" target="main">防采集混淆</a></li>
-					<li><a href="/admin/sys/data" title="数据库备份" target="main">数据库备份/还原</a></li>
+					<li><a href="/admin/run_logs" title="访问出错日志" target="main">访问出错日志</a></li>
+					<li><a href="/admin/db/index" title="数据库备份/还原" target="main">数据库备份/还原</a></li>
+					<li><a href="/admin/db/sql" title="sql 查询" target="main">sql 查询</a></li>
 				</ul>
 				<h4>管理员管理<i></i></h4>
 				<ul>
