--- a/app/views/account/main.html.erb
+++ b/app/views/account/main.html.erb
@@ -33,7 +33,7 @@
 					<li><a href="/admin/posts" title="评论管理" target="main">评论管理</a></li>
 					<li><a href="/admin/pics" title="图片管理" target="main">图片管理</a></li>
 					<li><a href="/admin/atts" title="附件管理" target="main">附件管理</a></li>
-					<li><a href="/admin/topics/recycling" title="文章回收站" target="main">文章回收站</a></li>
+					<li><a href="/admin/topics/trashes" title="文章回收站" target="main">文章回收站</a></li>
 				</ul>
 			</div>
 			<div class="navtree-list" style="display:none;">
@@ -43,6 +43,11 @@
 					<li><a href="/admin/friendlinks" title="友情链接" target="main">友情链接</a></li>
 					<li><a href="/admin/guestbooks" title="留言薄" target="main">留言薄</a></li>
 					<li><a href="/admin/mails" title="邮件订阅" target="main">邮件订阅</a></li>
+				</ul>
+				<h4>采集管理<i></i></h4>
+				<ul>
+					<li><a href="/admin/sea/rss" title="解析RSS" target="main">解析RSS</a></li>
+					<li><a href="/admin/sea/auto" title="自动采集" target="main">自动采集</a></li>
 				</ul>
 			</div>
 			<div class="navtree-list" style="display:none;">
