--- a/app/views/admin/topics/_form.html.erb
+++ b/app/views/admin/topics/_form.html.erb
@@ -1,39 +1,76 @@
+
 	<tbody>
 		<tr>
 			<td colspan="2" class="blank"></td>
 		</tr>
-		<% if @pcatalog %>
 		<tr>
-			<td class="data_label">上一级分类：</td>
+			<td class="data_label">分类：</td>
 			<td class="data_ipt">
-				<select name="catalog[parent_id]">
+				<select name="topic[catalog_id]">
 				<%
 					@catalogs.each do |catalog|
 				%>
-					<option value="<%= catalog.id %>"<% if catalog.id == @pcatalog.id %> selected<% end %>><%= catalog.name %></option>
+					<optgroup label="<%= catalog.name %>">
 				<%
 						catalog.sub_catalogs.each do |sub_catalog|
 				%>
-					<option value="<%= sub_catalog.id %>">&nbsp;&nbsp;|--<%= sub_catalog.name %></option>
+					<option value="<%= sub_catalog.id %>"<% if sub_catalog.id == @topic.catalog_id %> selected<% end %>>&nbsp;&nbsp;|--<%= sub_catalog.name %></option>
+				<%
+						sub_catalog.sub_catalogs.each do |sub_sub_catalog|
+				%>
+					<option value="<%= sub_sub_catalog.id %>"<% if sub_sub_catalog.id == @topic.catalog_id %> selected<% end %>>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|--<%= sub_sub_catalog.name %></option>
 				<%
 						end
 				%>	
+				<%
+						end
+				%>	
+					</optgroup>
 				<% 
 					end 
 				%>
 			</td>
 		</tr>
-		<% end %>
 		<tr>
-			<td class="data_label">分类名称：</td>
+			<td class="data_label">标题：</td>
 			<td class="data_ipt">
-				<%= f.text_field :name %>
+				<%= f.text_field :title, :style => "width:400px;" %>
 			</td>
 		</tr>
 		<tr>
-			<td class="data_label">路径：</td>
+			<td class="data_label">关键词：</td>
 			<td class="data_ipt">
-				<%= f.text_field :cdir %>
+				<%= f.text_field :keywords, :style => "width:400px;" %>
+			</td>
+		</tr>
+		<tr>
+			<td class="data_label">描述信息：</td>
+			<td class="data_ipt">
+				<%= f.text_area :description, :style => "width:400px;height:60px;" %>
+			</td>
+		</tr>
+		<tr>
+			<td class="data_label">作者：</td>
+			<td class="data_ipt">
+				<%= f.text_field :writer, :style => "width:100px;" %>
+				<div class="re-val">
+				<= &nbsp; <span>【未知】</span><span>【佚名】</span><span>【站长】</span>
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<td class="data_label">来源：</td>
+			<td class="data_ipt">
+				<%= f.text_field :source, :style => "width:100px;" %>
+				<div class="re-val">
+				<= &nbsp; <span>【不详】</span><span>【本站】</span><span>【互联网】</span>
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<td class="data_label">内容：</td>
+			<td class="data_ipt">
+				<%= kindeditor_tag :content, @content, :window_onload => true, :width => 680, :height => 400 %>
 			</td>
 		</tr>
 		<tr>
