--- a/app/views/admin/topics/new.html.erb
+++ b/app/views/admin/topics/new.html.erb
@@ -1,57 +1,18 @@
-<%= form_for [:admin, @catalog] do |f| %>
+<%= javascript_include_tag "kindeditor" %>
+<%= form_for [:admin, @topic] do |f| %>
 <table class="newtable">
 	<thead>
 		<tr>
 			<th colspan="2">新增</th>
 		</tr>
 	</thead>
-	<tbody>
-		<tr>
-			<td colspan="2" class="blank"></td>
-		</tr>
-		<% if @pcatalog %>
-		<tr>
-			<td class="data_label">上一级分类：</td>
-			<td class="data_ipt">
-				<select name="catalog[parent_id]">
-				<%
-					@catalogs.each do |catalog|
-				%>
-					<option value="<%= catalog.id %>"<% if catalog.id == @pcatalog.id %> selected<% end %>><%= catalog.name %></option>
-				<%
-						catalog.sub_catalogs.each do |sub_catalog|
-				%>
-					<option value="<%= sub_catalog.id %>"<% if sub_catalog.id == @pcatalog.id %> selected<% end %>>&nbsp;&nbsp;|--<%= sub_catalog.name %></option>
-				<%
-						end
-				%>	
-				<% 
-					end 
-				%>
-			</td>
-		</tr>
-		<% end %>
-		<tr>
-			<td class="data_label">分类名称：</td>
-			<td class="data_ipt">
-				<%= f.text_field :name %>
-			</td>
-		</tr>
-		<tr>
-			<td class="data_label">路径：</td>
-			<td class="data_ipt">
-				<%= f.text_field :cdir %>
-			</td>
-		</tr>
-		<tr>
-			<td>&nbsp;</td>
-			<td class="data_sbt">
-				<input type="submit" name="submit" value="提交" />
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2" class="blank"></td>
-		</tr>
-	</tbody>
+	<%= render :partial => 'form', :locals => { :f => f } %>
 </table>
 <% end %>
+
+<script type="text/javascript">
+$('.re-val span').click(function(){
+	$(this).parent().siblings('input').val($(this).text().replace('【', '').replace('】', ''));
+});
+</script>
+
