--- a/app/views/start/index.html.erb
+++ b/app/views/start/index.html.erb
@@ -87,7 +87,7 @@
 	<div class="fl-t">友情链接</div>
 	<p>
 		<% 10.times do %>
-		<a href="#" target="_blank">Text1</li>
+		<a href="#" target="_blank">Text1</a>
 		<% end %>
 	</p>
 </div>
