--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
 	</div>
 	<div id="Footer">
 		<div class="foot wapper clearfix">
+			<img src="/assets/fighting.gif" />
 			<p>
 				<% @catalogs.each_with_index do |catalog, i| %>
 					<a href="<%= catalog.show_url %>"><%= catalog.name %></a>
