--- a/app/views/account/main.html.erb
+++ b/app/views/account/main.html.erb
@@ -42,7 +42,6 @@
 					<li><a href="/admin/ads" title="广告管理" target="main">广告管理</a></li>
 					<li><a href="/admin/friendlinks" title="友情链接" target="main">友情链接</a></li>
 					<li><a href="/admin/guestbooks" title="留言薄" target="main">留言薄</a></li>
-					<li><a href="/admin/mails" title="邮件订阅" target="main">邮件订阅</a></li>
 				</ul>
 				<h4>采集管理<i></i></h4>
 				<ul>
@@ -54,6 +53,7 @@
 				<h4>系统相关<i></i></h4>
 				<ul>
 					<li><a href="/admin/sys/settings" title="系统参数" target="main">系统参数</a></li>
+					<li><a href="/admin/sys/mails" title="邮件设置" target="main">邮件设置</a></li>
 					<li><a href="/admin/sys/mark" title="图片水印" target="main">图片水印</a></li>
 					<li><a href="/admin/sys/article_mix" title="防采集混淆" target="main">防采集混淆</a></li>
 					<li><a href="/admin/run_logs" title="访问出错日志" target="main">访问出错日志</a></li>
