--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,11 +32,10 @@
 		<div class="foot wapper clearfix">
 			<img src="/assets/fighting.gif" />
 			<p>
-				<% @catalogs.each_with_index do |catalog, i| %>
-					<a href="<%= catalog.show_url %>"><%= catalog.name %></a>
-					<% if (i + 1) % 7 != 0 %><i>|</i><% else %></p><p><% end %>
-				<% end %>
-			新闻大观 news.nxyouxi.com ©2013  All rights reserved.</p>
+				<%= @catalogs.map{|c|"<a href=\"" + c.show_url + "\">" + c.name + "</a>"}.join("<i>|</i>").html_safe %>
+			</p>
+			<p><a href="#">关于我们</a><i>|</i><a href="gb">留言</a></p>
+			<p>新闻大观 news.nxyouxi.com ©2013  All rights reserved.</p>
 		</div>
 	</div>
 </div>
